# meebis

./: .dockerignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  dist-workspace.toml  release-please-config.json
.github/workflows/: ci.yml  docker.yml  release-please.yml  release.yml
src/: db.rs  main.rs  pubsub.rs  resp.rs  server.rs  sha1.rs
src/commands/: admin.rs  bitops.rs  clientcmd.rs  generic.rs  hash.rs  list.rs  mod.rs  set.rs  stream.rs  string.rs  zset.rs
src/commands/scripting/: cjson.rs  cmsgpack.rs  luabit.rs  mod.rs
tests/compat/: resp3_parity.py  run.sh
tests/compat/resp2/: 01-core.txt  02-options.txt  03-bitops.txt  04-scripting.txt  05-streams.txt
