[package]
name = "meebis"
version = "0.2.0"
edition = "2021"
description = "A fast, disposable, in-memory Redis-compatible server for ephemeral dev work"
license = "MIT"

[[bin]]
name = "meebis"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time", "signal"] }
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
