[package]
name = "meebis"
version = "0.4.0"
edition = "2021"
rust-version = "1.79"
description = "A fast, disposable, in-memory Redis-compatible server for ephemeral dev work"
license = "MIT"
repository = "https://github.com/mileszim/meebis"
homepage = "https://github.com/mileszim/meebis"
readme = "README.md"
keywords = ["redis", "in-memory", "cache", "development", "ephemeral"]
categories = ["caching", "database-implementations", "development-tools"]

[[bin]]
name = "meebis"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time", "signal"] }
bytes = "1"
# Embedded Lua 5.1 (Redis' scripting engine version), compiled from vendored C
# sources so EVAL/EVALSHA behave like real Redis. This is the one C dependency;
# it requires a C compiler at build time (see the Dockerfile).
mlua = { version = "0.10", features = ["lua51", "vendored"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
